update frontend code

--- a/uptrain/dashboard/frontend/dashboard/src/app/globals.css
+++ b/uptrain/dashboard/frontend/dashboard/src/app/globals.css
@@ -70,3 +70,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #7d76d6;
 }
+
+.scrollHorizontal::-webkit-scrollbar-thumb {
+  background: white;
+}
